bug solve
